--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
-MONGO_URL = mongodb+srv://daksh:yE4cOb0axMAzSpvo@bookstore.xpzymyh.mongodb.net/?retryWrites=true&w=majority&appName=BookStore
+# MONGO_URL = mongodb+srv://daksh:yE4cOb0axMAzSpvo@bookstore.xpzymyh.mongodb.net/?retryWrites=true&w=majority&appName=BookStore
+MONGO_URL = mongodb+srv://srushtichaudhari43:nwnTV4PCXw1gwDai@cluster0.sznkiij.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
